--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "typescript": "^4.6.2"
   },
   "scripts": {
-    "start": "node index.js",
-    "prestart": "tsc"
+    "start": "tsc-watch --onSuccess \" node dist/index.js\" "
+  },
+  "devDependencies": {
+    "@types/jquery": "^3.5.14",
+    "tsc-watch": "^4.6.2"
   }
 }
