--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Yunbeom Cha <uiurihappy@sju.ac.kr>",
   "license": "MIT",
   "dependencies": {
+    "crypto-js": "^4.1.1",
     "typescript": "^4.6.2"
   },
   "scripts": {
